--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Nike Shoe</title>
 </head>
 <body>
-    <img src="shoe.jpg" alt="Nike Shoe">
+    <img src="domino.jpg" alt="Nike Shoe">
     <p>Nike shoe</p>
     <button onclick="progress()">Purchase - $149</button>
     <p id="error"></p>
